umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@cdk_0281_OC1C(O)C(N)C(O)C(N)C_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: InvalidCxProperty
    message: Invalid CX property at position 22
opensmiles:
  success: false
  error:
    error_type: InvalidCxProperty
    message: Invalid CX property at position 22
