umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@cdk_0286_N12CCC3CCCCC3C1CC4CC_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: basic_chemaxon
category: basic_chemaxon
basic_opensmiles:
  success: true
  summary:
    sum_formula: C17N
    atom_count: 18
    bond_count: 21
